ultra changes and fixes to font size

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-5 lh-1 mb-3">Unique Pattern Designs Made Just For You.</h1>
-                            <p class="lead fw-bold text-muted mb-5">XARIIA is an AI enabled e-commerce platform that transforms your personality traits and design preferences into unique and distinctive pattern designs for clothing sold on the website.
+                            <p class="lead fw-bold text-muted mb-5">XARIIA is an AI enabled e-commerce platform that transforms your personality traits and design preferences into unique and distinctive pattern print designs for clothing sold on the website.
                             </p>
                             <!-- <p class="lead fw-bold text-muted mb-5">             
                                 Our mission is to revolutionize custom fashion.<br>
@@ -220,29 +220,6 @@
                 </div>
             </div>
         </header>
-        <!-- <section class="bg-light">
-            <div class="container px-5">
-                <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
-                    <div class="col-sm-8 col-md-4">
-                        <div class="px-5 px-sm-0 imgsteps"><img class=" img-fluid" src="assets/view.png" alt="a t-shirt with a hawaian print" /></div>
-                    </div>
-                    <div class="col-12 col-lg-8">
-                        <h2 class="display-5 lh-1 mb-4">Our mission is to revolutionize custom fashion.
-                        </h2>
-                        <p class="lead fw-bold text-muted mb-5 mb-lg-0">
-                            <p class="lead fw-bold text-muted mb-5">             
-                                We accomplish this by:<br>
-                                - Using AI to automate the print design process. <br>
-                                - Making high-fashion accessible and affordable to anyone. <br>
-                                - Selling a unique design in one click of a button. <br>
-                                - Being a pioneer in the digital & physical fashion  space.<br>
-                                - Selling digital clothing that’s 96% more sustainable, With on-demand production of our physical cloths.                                
-                            </p>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section> -->
         <!-- Quote/testimonial aside-->
         <aside class="text-center bg-gradient-primary-to-secondary">
             <div class="container px-5">
@@ -252,7 +229,7 @@
                             <h2 class="display-5 lh-1 mb-4">Mission & Vision</h2>
                             <p class="fw-bold">Our mission is to revolutionize custom fashion.<br>
                                 We accomplish this by:<br>
-                                - Using AI to automate and streamline the design process, thus simplifying it.<br>
+                                - Using AI to automate and streamline the custom pattern print design process, thus simplifying it.<br>
                                 - Making high-fashion accessible and affordable for everyone worldwide.<br>
                                 - Selling a unique and distinct design while keeping the process of obtaining a piece simple and user-friendly.<br>
                                 - By being a pioneer in the digital and physical fashion spaces by providing custom designs for both, thus connecting them.<br>
@@ -277,7 +254,7 @@
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/cloths.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">Product Selector</h3>
-                                        <p class="fw-bold text-muted mb-0">We offer a diverse selection of digital & phygital NFT fashion products you can choose from, for the custom print design to be applied to.
+                                        <p class="fw-bold text-muted mb-0">A product selector that allows you to choose from a diverse selection of digital & phygital clothes for your custom print design to be applied to.
                                         </p>
                                     </div>
                                 </div>
@@ -288,6 +265,7 @@
                                         <h3 class="font-alt">Design Preference Selector
                                         </h3>
                                         <p class="fw-bold text-muted mb-0">A user interface that makes collecting your design preferences as simple as possible.
+
                                         </p>
                                     </div>
                                 </div>
@@ -299,19 +277,21 @@
                                         <img class="iconwidth" src="assets/ai.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">Creative AI </h3>
                                         <p class="fw-bold text-muted mb-0">
-                                            A generative AI that creates unique and distinctive designs for your chosen product in real-time based on your preferences.                                    </div>
+                                            A generative AI that instantly creates unique and distinctive designs for your chosen product based on your selected design preferences.
+                                        </p>
                                     </div>
+                                </div>
                                 <div class="col-md-6">
                                     <!-- Feature item-->
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/mockup-design.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">3D Mockup Generator</h3>
                                         <p class="fw-bold text-muted mb-0">
-                                            A 3D product mockup generator that enables you to see the generated pattern design applied to the chosen product in real-time.                                        </p>
-                                    </div>
+                                            A 3D product mockup generator that allows you to see the generated pattern design applied to your chosen product in real-time.                                       
+                                         </p>
+                                    </div>     
                                 </div>
                             </div>
-                        </div>
                     </div>
                     <!-- <div class="col-lg-4 order-lg-0">
                         <div class="features-device-mockup">
@@ -348,7 +328,7 @@
                     <div class="col-12 col-lg-6">
                         <h2 class="display-5 lh-1 mb-4"> 1. You Select A Product</h2>
                         <p class="lead fw-bold text-muted mb-5 mb-lg-0">
-                            Our platform will provide you with a wide variety of digital and phygital clothes (clothes that are both digital and physical, connected by a digital ID and worn in both the physical and virtual worlds) for your custom design to go on.                        </p>                   
+                            Our platform will provide you with a diverse selection of digital and phygital clothes (clothes that are both digital and physical, connected by a digital ID and worn in both the physical and virtual worlds) for your custom pattern print design to be applied to.                        </p>                   
                      </div>
                     <div class="col-xs-10 col-md-6 col-lg-4">
                         <div class="px-sm-0 imgsteps1"><img class="img-fluid" src="assets/productnoprint.png" alt="a white t-shirt with no print"  /></div>
@@ -362,7 +342,9 @@
                     <div class="col-12 col-lg-6">
                         <h2 class="display-5 lh-1 mb-4">2. You Select Your Design Preferences</h2>
                         <p class="lead fw-bold text-muted mb-5 mb-lg-0">
-                            Following your selection of a product, the platform will direct you to a page where you can customize your design by selecting preferences from the user interface. Our AI will create a design for you based on your preferences.                        </p>
+                            Following your product selection, the platform will direct you to a page where you can choose the size (for physical products), design preferences from the user interface, such as trend, favorite color, and occasion, as well as factors like age and gender on which to base the design.
+                            <br>
+                            This will allow our AI to generate a design that is specific to your choices.                        </p>
                     </div>
                     <div class="col-sm-10 col-md-8 col-lg-6">
                         <div class="px-sm-0 imgsteps"><img class="img-fluid" src="assets/UInoprint.png" alt="a  picture of a white shirt, next to it is the user interface" /></div>
@@ -376,8 +358,9 @@
                     <div class="col-12 col-lg-6">
                         <h2 class="display-5 lh-1 mb-4">3. You See A Mockup Of the Product</h2>
                         <p class="lead fw-bold text-muted mb-5 mb-lg-0">
-                            The product will have the AI-generated design applied to it so that you can view it in 3D and augmented reality before you buy it.<br>
-                            The design will be instantly minted to the blockchain and saved there, enabling you to use your distinctive design on numerous products in the future.
+                            Once you tap the Generate button, our AI will instantly generate a design and apply it to the 3D model of the product you've chosen in real-time, allowing you to see the product before you buy it.
+                            <br>
+                            Your generated custom pattern print design & product will be automatically minted onto the blockchain and saved there, enabling you to apply it to numerous products in the future.
                         </p>                    
                     </div>
                     <div class="col-sm-10 col-md-8 col-lg-6">
@@ -393,7 +376,7 @@
                         <h2 class="display-5 lh-1 mb-4">4. Purchase & Use</h2>
                         <p class="lead fw-bold text-muted mb-5 mb-lg-0">
                             The purchased product can be used in the following three ways:<br>
-                            - Physically worn in real life as we will produce the product as needed based on your size and generated design.<br>
+                            - Physically worn in real life as we will produce your chosen product based on your size and generated design. <br>
                             - Digitally worn in real life by using social media filters like Snapchat Lens and augmented reality applications.<br>
                             - In the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox. where you can use digital products to dress your avatar.
                         </p>                    
@@ -493,72 +476,7 @@
                 </div>
             </div>
         </footer>
-        <!-- Feedback Modal-->
-        <div class="modal fade" id="feedbackModal" tabindex="-1" aria-labelledby="feedbackModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                    <div class="modal-header bg-gradient-primary-to-secondary p-4">
-                        <h5 class="modal-title font-alt text-white" id="feedbackModalLabel">Send feedback</h5>
-                        <button class="btn-close btn-close-white" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body border-0 p-4">
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- * * SB Forms Contact Form * *-->
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- This form is pre-integrated with SB Forms.-->
-                        <!-- To make this form functional, sign up at-->
-                        <!-- https://startbootstrap.com/solution/contact-forms-->
-                        <!-- to get an API token!-->
-                        <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-                            <!-- Name input-->
-                            <div class="form-floating mb-3">
-                                <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
-                                <label for="name">Full name</label>
-                                <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
-                            </div>
-                            <!-- Email address input-->
-                            <div class="form-floating mb-3">
-                                <input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />
-                                <label for="email">Email address</label>
-                                <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                                <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
-                            </div>
-                            <!-- Phone number input-->
-                            <div class="form-floating mb-3">
-                                <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required" />
-                                <label for="phone">Phone number</label>
-                                <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
-                            </div>
-                            <!-- Message input-->
-                            <div class="form-floating mb-3">
-                                <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>
-                                <label for="message">Message</label>
-                                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
-                            </div>
-                            <!-- Submit success message-->
-                            <!---->
-                            <!-- This is what your users will see when the form-->
-                            <!-- has successfully submitted-->
-                            <div class="d-none" id="submitSuccessMessage">
-                                <div class="text-center mb-3">
-                                    <div class="fw-bolder">Form submission successful!</div>
-                                    To activate this form, sign up at
-                                    <br />
-                                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                                </div>
-                            </div>
-                            <!-- Submit error message-->
-                            <!---->
-                            <!-- This is what your users will see when there is-->
-                            <!-- an error submitting the form-->
-                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
-                            <!-- Submit Button-->
-                            <div class="d-grid"><button class="btn btn-primary rounded-pill btn-lg disabled" id="submitButton" type="submit">Submit</button></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
