--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-5 lh-1 mb-3">Unique Pattern Designs Made Just For You.</h1>
-                            <p class="lead fw-bold text-muted mb-5">XARIIA is an AI enabled e-commerce platform that transforms your personality traits and design preferences into unique and distinctive pattern print designs for clothing sold on the website.
+                            <p class="lead fw-bold text-muted mb-5 textresponsive">XARIIA is an AI enabled e-commerce platform that transforms your personality traits and design preferences into unique and distinctive pattern print designs for clothing sold on the website.
                             </p>
                             <!-- <p class="lead fw-bold text-muted mb-5">             
                                 Our mission is to revolutionize custom fashion.<br>
@@ -227,7 +227,7 @@
                     <div class="col-xl-8">
                         <div class="textblack lead mb-4">
                             <h2 class="display-5 lh-1 mb-4">Mission & Vision</h2>
-                            <p class="fw-bold">Our mission is to revolutionize custom fashion.<br>
+                            <p class="fw-bold textresponsive">Our mission is to revolutionize custom fashion.<br>
                                 We accomplish this by:<br>
                                 - Using AI to automate and streamline the custom pattern print design process, thus simplifying it.<br>
                                 - Making high-fashion accessible and affordable for everyone worldwide.<br>
@@ -254,7 +254,7 @@
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/cloths.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">Product Selector</h3>
-                                        <p class="fw-bold text-muted mb-0">A product selector that allows you to choose from a diverse selection of digital & phygital clothes for your custom print design to be applied to.
+                                        <p class="fw-bold text-muted mb-0 textresponsive">A product selector that allows you to choose from a diverse selection of digital & phygital clothes for your custom print design to be applied to.
                                         </p>
                                     </div>
                                 </div>
@@ -264,7 +264,7 @@
                                         <img class="iconwidth" src="assets/user-interface.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">Design Preference Selector
                                         </h3>
-                                        <p class="fw-bold text-muted mb-0">A user interface that makes collecting your design preferences as simple as possible.
+                                        <p class="fw-bold text-muted mb-0 textresponsive">A user interface that makes collecting your design preferences as simple as possible.
 
                                         </p>
                                     </div>
@@ -276,7 +276,7 @@
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/ai.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">Creative AI </h3>
-                                        <p class="fw-bold text-muted mb-0">
+                                        <p class="fw-bold text-muted mb-0 textresponsive">
                                             A generative AI that instantly creates unique and distinctive designs for your chosen product based on your selected design preferences.
                                         </p>
                                     </div>
@@ -286,7 +286,7 @@
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/mockup-design.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">3D Mockup Generator</h3>
-                                        <p class="fw-bold text-muted mb-0">
+                                        <p class="fw-bold text-muted mb-0 textresponsive">
                                             A 3D product mockup generator that allows you to see the generated pattern design applied to your chosen product in real-time.                                       
                                          </p>
                                     </div>     
@@ -327,7 +327,7 @@
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
                         <h2 class="display-5 lh-1 mb-4"> 1. You Select A Product</h2>
-                        <p class="lead fw-bold text-muted mb-5 mb-lg-0">
+                        <p class="lead fw-bold text-muted mb-5 mb-lg-0 textresponsive">
                             Our platform will provide you with a diverse selection of digital and phygital clothes (clothes that are both digital and physical, connected by a digital ID and worn in both the physical and virtual worlds) for your custom pattern print design to be applied to.                        </p>                   
                      </div>
                     <div class="col-xs-10 col-md-6 col-lg-4">
@@ -341,7 +341,7 @@
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
                         <h2 class="display-5 lh-1 mb-4">2. You Select Your Design Preferences</h2>
-                        <p class="lead fw-bold text-muted mb-5 mb-lg-0">
+                        <p class="lead fw-bold text-muted mb-5 mb-lg-0 textresponsive">
                             Following your product selection, the platform will direct you to a page where you can choose the size (for physical products), design preferences from the user interface, such as trend, favorite color, and occasion, as well as factors like age and gender on which to base the design.
                             <br>
                             This will allow our AI to generate a design that is specific to your choices.                        </p>
@@ -357,7 +357,7 @@
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
                         <h2 class="display-5 lh-1 mb-4">3. You See A Mockup Of the Product</h2>
-                        <p class="lead fw-bold text-muted mb-5 mb-lg-0">
+                        <p class="lead fw-bold text-muted mb-5 mb-lg-0 textresponsive">
                             Once you tap the Generate button, our AI will instantly generate a design and apply it to the 3D model of the product you've chosen in real-time, allowing you to see the product before you buy it.
                             <br>
                             Your generated custom pattern print design & product will be automatically minted onto the blockchain and saved there, enabling you to apply it to numerous products in the future.
@@ -374,7 +374,7 @@
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
                         <h2 class="display-5 lh-1 mb-4">4. Purchase & Use</h2>
-                        <p class="lead fw-bold text-muted mb-5 mb-lg-0">
+                        <p class="lead fw-bold text-muted mb-5 mb-lg-0 textresponsive">
                             The purchased product can be used in the following three ways:<br>
                             - Physically worn in real life as we will produce your chosen product based on your size and generated design. <br>
                             - Digitally worn in real life by using social media filters like Snapchat Lens and augmented reality applications.<br>
