--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         <!-- App features section-->
         <section id="features">
             <div class="container px-5">
-                <h2 class="display-5 lh-1 mb-4">Futures & Benefits
+                <h2 class="display-5 lh-1 mb-4">Futures & Technology
                 </h2>
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-12 order-lg-1 mb-5 mb-lg-0">
