--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                             Our platform will provide you with a diverse selection of digital and phygital clothes (clothes that are both digital and physical, connected by a digital ID and worn in both the physical and virtual worlds) for your custom pattern print design to be applied to.                        </p>                   
                      </div>
                     <div class="col-xs-10 col-md-6 col-lg-4">
-                        <div class="px-sm-0 imgsteps1"><img class="img-fluid" src="assets/productnoprint.png" alt="a white t-shirt with no print"  /></div>
+                        <div class="px-sm-0"><img class="img-fluid  imgsteps1" src="assets/productnoprint.png" alt="a white t-shirt with no print"  /></div>
                     </div>
                 </div>
             </div>
