--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                                 - Making high-fashion accessible and affordable for everyone worldwide.<br>
                                 - Selling a unique and distinct design while keeping the process of obtaining a piece simple and user-friendly.<br>
                                 - By being a pioneer in the digital and physical fashion spaces by providing custom designs for both, thus connecting them.<br>
-                                - Selling digital clothing that’s 96% more sustianible than Physical clothing and doing on-demand production for our physical clothes.<br></p>
+                                - Selling digital clothing that’s 96% more sustainable than Physical clothing and doing on-demand production for our physical clothes.<br></p>
                         </div>
                         <img src="assets/xariia.png" alt="xariia logo" style="height: 3rem" />
                     </div>
