--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
         <section class="bg-gradient-primary-to-secondary footersection" id="download">
             <div class="container px-5">
                 <div class="row gx-5">
-                    <div class="col-lg-6">
+                    <div class="col-lg-5">
                         <!-- Mashead text and app badges-->
                         <div class="mb-6 mb-lg-0 text-center text-lg-start">
                             <h4 class="font-alt">Join Us</h4>
@@ -439,7 +439,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-1">
+                    </div>
+                    <div class="col-lg-4">
                         <div class="col-lg-6 h-100 textcenterfootermedia my-auto">
                             <h4 class="font-alt">Follow Us</h4>
                             <ul class="list-inline mb-0">
@@ -453,6 +455,12 @@
                                     <a href="https://www.linkedin.com/company/xariia/?viewAsMember=true" target="_blank"><i class="bi-linkedin fs-3"></i></a>
                                 </li>
                             </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="col-lg-6 h-100 textcenterfootermedia my-auto">
+                            <h4 class="font-alt">Email</h4>
+                            <div class="fw-bold subscrib"><a href="mailto:info@xariia.com">info@xariia.com</a></div>
                         </div>
                     </div>
                 </div>
