--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 <div class="row gx-5">
                     <div class="col-lg-5">
                         <!-- Mashead text and app badges-->
-                        <div class="mb-6 mb-lg-0 text-center text-lg-start">
+                        <div class="mb-6 mb-lg-12 text-center text-lg-start">
                             <h4 class="font-alt">Join Us</h4>
                             <div class="d-flex flex-column flex-lg-row align-items-center">
                                 <div class="newsletter">
@@ -441,8 +441,8 @@
                     </div>
                     <div class="col-lg-1">
                     </div>
-                    <div class="col-lg-4">
-                        <div class="col-lg-6 h-100 textcenterfootermedia my-auto">
+                    <div class="col-lg-3">
+                        <div class="col-lg-12 h-100 textcenterfootermedia my-auto">
                             <h4 class="font-alt">Follow Us</h4>
                             <ul class="list-inline mb-0">
                                 <li class="list-inline-item me-4">
@@ -457,9 +457,10 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-2">
-                        <div class="col-lg-6 h-100 textcenterfootermedia my-auto">
-                            <h4 class="font-alt">Email</h4>
+                
+                    <div class="col-lg-3">
+                        <div class="col-lg-12 h-100 textcenterfootermedia my-auto">
+                            <h4 class="font-alt">Contact Us</h4>
                             <div class="fw-bold subscrib"><a href="mailto:info@xariia.com">info@xariia.com</a></div>
                         </div>
                     </div>
