new changes to btn colors

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                 - By being a pioneer in the digital and physical fashion spaces by providing custom designs for both, thus connecting them.<br>
                                 - Selling digital clothing that’s 96% more sustainable than Physical clothing and doing on-demand production for our physical clothes.<br></p>
                         </div>
-                        <img src="assets/xariia.png" alt="xariia logo" style="height: 3rem" />
+                        <!-- <img src="assets/xariia.png" alt="xariia logo" style="height: 3rem" /> -->
                     </div>
                 </div>
             </div>
