--- a/index.html
+++ b/index.html
@@ -388,13 +388,24 @@
             </div>
         </section>
 
-        <section class="bg-light">
+        <!-- <section class="bg-light">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-center">
                     <h2 class="display-5 lh-1 mb-4">Try Our Prototype</h2>
                     <iframe id="pio-playerframe" src="prototype.html" scrolling="NO" style="width:844px; height:600px;" webkitAllowFullScreen mozallowfullscreen allowFullScreen allowvr allow="autoplay"></iframe>
                 </div>
             </div>
+        </section> -->
+
+        <section>
+                <div>
+                    <div class="container px-5">
+                            <h2 class="display-5 lh-1 mb-4">Try Our Early Version</h2>
+                    </div>
+                    <div class="align-items-center justify-content-center">
+                    <iframe  src="https://www.xariia.net/" scrolling="YES" webkitAllowFullScreen mozallowfullscreen allowFullScreen allowvr allow="autoplay"></iframe>
+                </div>
+                </div>
         </section>
 
       
