--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                             <h2 class="display-5 lh-1 mb-4">Try Our Early Version</h2>
                     </div>
                     <div class="align-items-center justify-content-center">
-                    <iframe  src="https://www.xariia.net/" scrolling="YES" webkitAllowFullScreen mozallowfullscreen allowFullScreen allowvr allow="autoplay"></iframe>
+                    <iframe  src="https://xariia.net/" scrolling="YES" webkitAllowFullScreen mozallowfullscreen allowFullScreen allowvr allow="autoplay"></iframe>
                 </div>
                 </div>
         </section>
