--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <aside class="text-center bg-gradient-primary-to-secondary">
             <div class="container px-5">
                 <div class="row gx-5 justify-content-center">
-                    <div class="col-xl-12">
+                    <div class="col-xl-8">
                         <div class="textblack lead mb-4">
                             <h2 class="display-5 lh-1 mb-4">Mission & Vision</h2>
                             <p class="fw-bold textresponsive">Our mission is to revolutionize custom fashion.<br>
@@ -322,17 +322,18 @@
             </div>
         </section>
         <!-- Basic features section-->
-        <section class="bg-light">
+         <!-- <section class="bg-light">
             <div class="container px-5">
                 <h2 class="display-5 lh-1 mb-4">How Does It Work ?</h2>
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
                         <h2 class="display-5 lh-1 mb-4"> 1. You Select A Product</h2>
                         <p class="lead fw-bold text-muted mb-5 mb-lg-0 textresponsive">
-                            Our platform will provide you with a diverse selection of digital and phygital clothes (clothes that are both digital and physical, connected by a digital ID and worn in both the physical and virtual worlds) for your custom pattern print design to be applied to.                        </p>                   
+                            Our platform will provide you with a wide variety of physical, digital, and phygital cloths (clothes that are both digital and physical, connected by a digital ID, and worn in both the physical and virtual worlds) for your custom design to go on.
+                        </p>                   
                      </div>
                     <div class="col-xs-10 col-md-6 col-lg-6">
-                        <div class="px-sm-0"><img class="img-fluid" src="assets/productselector.png" alt="a white t-shirt with no print"  /></div>
+                        <div class="px-sm-0"><img class="img-fluid" src="assets/productselector.png" alt="a white t-shirt with no print"/></div>
                     </div>
                 </div>
             </div>
@@ -343,9 +344,9 @@
                     <div class="col-12 col-lg-6">
                         <h2 class="display-5 lh-1 mb-4">2. You Select Your Design Preferences</h2>
                         <p class="lead fw-bold text-muted mb-5 mb-lg-0 textresponsive">
-                            Following your product selection, the platform will direct you to a page where you can choose the size (for physical products), design preferences from the user interface, such as trend, favorite color, and occasion, as well as factors like age and gender on which to base the design.
-                            <br>
-                            This will allow our AI to generate a design that is specific to your choices.                        </p>
+                            Following your product selection, the platform will direct you to a page where you can choose the size (for physical products), design preferences from the user interface, such as trend, favorite color, and occasion, as well as factors like age and gender on which to base the design.<br>
+                            This will allow our AI to generate a design that is specific to your choices.                                     
+                        </p>
                     </div>
                     <div class="col-sm-10 col-md-8 col-lg-6">
                         <div class="px-sm-0"><img class="img-fluid" src="assets/productnoprint.png" alt="a  picture of a white shirt, next to it is the user interface" /></div>
@@ -359,9 +360,8 @@
                     <div class="col-12 col-lg-6">
                         <h2 class="display-5 lh-1 mb-6">3. You See A Mockup Of the Product</h2>
                         <p class="lead fw-bold text-muted mb-5 mb-lg-0 textresponsive">
-                            Once you tap the Generate button, our AI will instantly generate a design and apply it to the 3D model of the product you've chosen in real-time, allowing you to see the product before you buy it.
-                            <br>
-                            Your generated custom pattern print design & product will be automatically minted onto the blockchain and saved there, enabling you to apply it to numerous products in the future.
+                            Once you tap the Generate button, our AI will instantly generate a design and apply it to the 3D model of the product you've chosen in real-time, allowing you to see the product before you buy it.<br>
+                            Your generated custom pattern print design & product will be automatically minted onto the blockchain and saved there, enabling you to apply it to numerous products in the future.  
                         </p>                    
                     </div>
                     <div class="col-sm-10 col-md-8 col-lg-6">
@@ -376,10 +376,10 @@
                     <div class="col-12 col-lg-6">
                         <h2 class="display-5 lh-1 mb-4">4. Purchase & Use</h2>
                         <p class="lead fw-bold text-muted mb-5 mb-lg-0 textresponsive">
-                            The purchased product can be used in the following three ways:<br>
-                            - Physically worn in real life as we will produce your chosen product based on your size and generated design. <br>
-                            - Digitally worn in real life by using social media filters like Snapchat Lens and augmented reality applications.<br>
-                            - In the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox. where you can use digital products to dress your avatar.
+                            The purchased product can be used in the following ways: <br>
+                            - Physical Products : Physically worn in real life as we will produce your chosen product based on your size and generated design. <br>
+                            - Digital Products : Digitally worn in real life by using social media filters like Snapchat Lens and augmented reality applications Plus In the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox, where users can use their digital products to dress their avatars.<br>
+                            - Phygital Products : Physically + Digitally.
                         </p>                    
                     </div>
                     <div class="col-sm-10 col-md-8 col-lg-6">
@@ -387,7 +387,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- <section class="bg-light">
             <div class="container px-5">
@@ -401,7 +401,7 @@
         <section>
                 <div>
                     <div class="container px-5">
-                            <h2 class="display-5 lh-1 mb-4">Try Our Early Version</h2>
+                            <h2 class="display-5 lh-1 mb-4">Try Out Our Alpha Release</h2>
                     </div>
                     <div class="align-items-center justify-content-center">
                     <iframe  src="https://xariia.net/" scrolling="YES" webkitAllowFullScreen mozallowfullscreen allowFullScreen allowvr allow="autoplay"></iframe>
