--- a/index.html
+++ b/index.html
@@ -409,6 +409,25 @@
                 </div>
         </section>
 
+        <section class="bg-light">
+            <div class="container px-5">
+                <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
+                    <div class="col-12 col-lg-6">
+                        <h2 class="display-5 lh-1 mb-4">Products Use Cases</h2>
+                        <p class="lead fw-bold text-muted mb-5 mb-lg-0 textresponsive">
+                            The purchased product can be used in the following ways: <br>
+                            - Physical Products : Physically worn in real life as we will produce your chosen product based on your size and generated design. <br>
+                            - Digital Products : Digitally worn in real life by using social media filters like Snapchat Lens and augmented reality applications Plus In the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox, where users can use their digital products to dress their avatars.<br>
+                            - Phygital Products : Physically + Digitally.
+                        </p>                    
+                    </div>
+                    <div class="col-sm-10 col-md-8 col-lg-6">
+                        <div class="px-sm-0"><img class=" img-fluid" src="assets/usecase.png" alt="a t-shirt with a hawaian print" /></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
       
            
         <!-- Call to action section-->
